# photo_editor

./: CMakeLists.txt  README.md
src/: filter_parser.cpp  filter_parser.h  image_processing.cpp  image_processing.h  main.cpp
